--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="trabajo">
                             <div class="thumb">
                                 <a href="/Paginas de practicas/2Montañas/index.html" target="_blank">
-                                    <img src="img/trabajos/1.jpg" alt=""
+                                    <img src="img/trabajos/1.webp" alt=""
                                 /></a>
                             </div>
                             <div class="descripcion">
@@ -66,7 +66,7 @@
                         <div class="trabajo">
                             <div class="thumb">
                                 <a href="/Paginas de practicas/1/html/Index.html" target="_blank">
-                                    <img src="img/trabajos/2.jpg" alt=""
+                                    <img src="img/trabajos/2.webp" alt=""
                                 /></a>
                             </div>
                             <div class="descripcion">
