--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
 
                     <div class="texto">
-                        <h3 class="titulo">Acerca de</h3>
+                        <h3 class="titulo">Acerca de hola</h3>
                         <p>
                             Lorem ipsum dolor <span class="bold">sit amet consectetur</span> adipisicing elit.
                             Reiciendis, reprehenderit Lorem ipsum dolor sit amet consectetur
