--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="contenedor-trabajos">
                         <div class="trabajo">
                             <div class="thumb">
-                                <a href="/Paginas de practicas/2Montañas/index.html" target="_blank">
+                                <a href="https://mountains-mf.netlify.app/" target="_blank">
                                     <img src="img/trabajos/1.webp" alt=""
                                 /></a>
                             </div>
