--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="trabajo">
                             <div class="thumb">
                                 <a href="https://mountains-mf.netlify.app/" target="_blank">
-                                    <img src="img/trabajos/1.webp" alt=""
+                                    <img src="img/trabajos/mountains.png" alt=""
                                 /></a>
                             </div>
                             <div class="descripcion">
