--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                         </div>
                         <div class="trabajo">
                             <div class="thumb">
-                                <a href="/Paginas de practicas/1/html/Index.html" target="_blank">
-                                    <img src="img/trabajos/2.webp" alt=""
+                                <a href="https://restaurant-mf.netlify.app/" target="_blank">
+                                    <img src="img/trabajos/restaurant.png" alt=""
                                 /></a>
                             </div>
                             <div class="descripcion">
-                                <p class="nombre">Lista de Compras</p>
-                                <p class="categoria">HTML - CSS</p>
+                                <p class="nombre">Café</p>
+                                <p class="categoria">HTML - CSS - JS</p>
                             </div>
                         </div>
                         <div class="trabajo">
