--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             </div>
                             <div class="descripcion">
                                 <p class="nombre">Montañas</p>
-                                <p class="categoria">HTML - CSS</p>
+                                <p class="categoria">HTML - SASS</p>
                             </div>
                         </div>
                         <div class="trabajo">
@@ -71,18 +71,18 @@
                             </div>
                             <div class="descripcion">
                                 <p class="nombre">Café</p>
-                                <p class="categoria">HTML - CSS - JS</p>
+                                <p class="categoria">HTML - SASS - JS</p>
                             </div>
                         </div>
                         <div class="trabajo">
                             <div class="thumb">
-                                <a href="/Paginas de practicas/1/html/multimedia.html" target="_blank">
-                                    <img src="img/trabajos/3.jpg" alt=""
+                                <a href="https://notasjs-mf.netlify.app/" target="_blank">
+                                    <img src="img/trabajos/notas.png" alt=""
                                 /></a>
                             </div>
                             <div class="descripcion">
-                                <p class="nombre">Multimedia</p>
-                                <p class="categoria">HTML - CSS</p>
+                                <p class="nombre">Notas</p>
+                                <p class="categoria">HTML - SASS - JS</p>
                             </div>
                         </div>
                         <div class="trabajo">
