--- a/index.html
+++ b/index.html
@@ -87,11 +87,13 @@
                         </div>
                         <div class="trabajo">
                             <div class="thumb">
-                                <a href="#"><img src="img/trabajos/4.jpg" alt="" /></a>
+                                <a href="https://carrito-comida-mf.netlify.app/"
+                                    ><img src="img/trabajos/carritoComidas.png" alt=""
+                                /></a>
                             </div>
                             <div class="descripcion">
-                                <p class="nombre">Lorem Ipsum</p>
-                                <p class="categoria">HTML - CSS</p>
+                                <p class="nombre">Carrito de Comida</p>
+                                <p class="categoria">HTML - SASS - JS</p>
                             </div>
                         </div>
                         <div class="trabajo">
