--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                         <div class="trabajo">
                             <div class="thumb">
-                                <a href="https://carrito-comida-mf.netlify.app/"
+                                <a href="https://carrito-comida-mf.netlify.app/" target="_blank"
                                     ><img src="img/trabajos/carritoComidas.png" alt=""
                                 /></a>
                             </div>
