--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="materialize.min.css" />
         <link rel="stylesheet" href="normalize.css" />
         <link rel="stylesheet" href="./css/all.min.css" />
         <link rel="stylesheet" href="estilos.css" />
@@ -17,7 +18,7 @@
         <header>
             <div class="contenedor">
                 <nav class="menu">
-                    <div class="a"><a href="#acerca-de">Acerca de</a></div>
+                    <div class="a"><a href="#acerca-de">Habilidades</a></div>
                     <div class="a"><a href="#trabajos">Trabajos</a></div>
                     <div class="a"><a href="#contacto">Contacto</a></div>
                 </nav>
@@ -39,12 +40,24 @@
                     </div>
 
                     <div class="texto">
-                        <h3 class="titulo">Acerca de</h3>
-                        <p>
-                            Lorem ipsum dolor <span class="bold">sit amet consectetur</span> adipisicing elit.
-                            Reiciendis, reprehenderit Lorem ipsum dolor sit amet consectetur
-                            <span class="bold">adipisicing elit.</span> Aut.
-                        </p>
+                        <h3 class="habilidades">Habilidades</h3>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col s12">
+                                    <div class="carousel center-align">
+                                        <div class="carousel-item">
+                                            <img src="img/carousel/html.png" alt="" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/carousel/css.png" alt="" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/carousel/js.png" alt="" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -161,6 +174,7 @@
             </section>
         </footer>
 
+        <script src="materialize.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
