--- a/index.html
+++ b/index.html
@@ -167,9 +167,15 @@
                 <div class="contenedor">
                     <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#" class="youtube"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#" class="github"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/fede.minatta/?hl=es-la" target="_blank" class="instagram"
+                        ><i class="fa-brands fa-instagram"></i
+                    ></a>
+                    <a href="https://github.com/fedeminatta" target="_blank" class="github"
+                        ><i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="https://www.linkedin.com/in/fede-minatta-579a6b227/" target="_blank" class="linkedin"
+                        ><i class="fa-brands fa-linkedin"></i
+                    ></a>
                 </div>
             </section>
         </footer>
