--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="materialize.min.css" />
+        <link rel="stylesheet" href="carousel.css" />
         <link rel="stylesheet" href="normalize.css" />
         <link rel="stylesheet" href="./css/all.min.css" />
         <link rel="stylesheet" href="estilos.css" />
@@ -53,6 +53,12 @@
                                         </div>
                                         <div class="carousel-item">
                                             <img src="img/carousel/js.png" alt="" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/carousel/sass.png" alt="" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/carousel/materialize.png" alt="" />
                                         </div>
                                     </div>
                                 </div>
