--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                         </div>
                         <div class="trabajo">
                             <div class="thumb">
-                                <a href="#"><img src="img/trabajos/5.jpg" alt="" /></a>
+                                <a href="https://filtrador-autos.netlify.app/"><img src="img/trabajos/filtradorAutos.png" alt="" /></a>
                             </div>
                             <div class="descripcion">
-                                <p class="nombre">Lorem Ipsum</p>
-                                <p class="categoria">HTML - CSS</p>
+                                <p class="nombre">Filtrador de autos</p>
+                                <p class="categoria">HTML - SASS - JS</p>
                             </div>
                         </div>
                         <div class="trabajo">
