--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         </div>
                         <div class="trabajo">
                             <div class="thumb">
-                                <a href="https://filtrador-autos.netlify.app/"><img src="img/trabajos/filtradorAutos.png" alt="" /></a>
+                                <a href="https://filtrador-autos.netlify.app/" target="_blank"><img src="img/trabajos/filtradorAutos.png" alt="" /></a>
                             </div>
                             <div class="descripcion">
                                 <p class="nombre">Filtrador de autos</p>
