--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </div>
                         <div class="trabajo">
                             <div class="thumb">
-                                <a href="https://hojas.netlify.app/"><img src="img/trabajos/hojas.png" alt="" /></a>
+                                <a href="https://hojas.netlify.app/" target="_blank"><img src="img/trabajos/hojas.png" alt="" /></a>
                             </div>
                             <div class="descripcion">
                                 <p class="nombre">Plantas</p>
