--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                         </div>
                         <div class="trabajo">
                             <div class="thumb">
-                                <a href="https://hojas.netlify.app/" target="_blank"><img src="img/trabajos/hojas.png" alt="" /></a>
+                                <a href="#" target="_blank"><img src="img/trabajos/8.jpg" alt="" /></a>
                             </div>
                             <div class="descripcion">
-                                <p class="nombre">Plantas</p>
-                                <p class="categoria">HTML - SASS</p>
+                                <p class="nombre">Lorem Ipsum</p>
+                                <p class="categoria">HTML - CSS</p>
                             </div>
                         </div>
                         <div class="trabajo">
