--- a/index.html
+++ b/index.html
@@ -1,169 +1,169 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="carousel.css" />
-        <link rel="stylesheet" href="normalize.css" />
-        <link rel="stylesheet" href="./css/all.min.css" />
-        <link rel="stylesheet" href="estilos.min.css" />
-        <title>Portafolio</title>
-    </head>
-    <body>
-        <header>
-            <div class="contenedor">
-                <nav class="menu">
-                    <div class="a"><a href="#acerca-de">Habilidades</a></div>
-                    <div class="a"><a href="#trabajos">Trabajos</a></div>
-                    <div class="a"><a href="#contacto">Contacto</a></div>
-                </nav>
 
-                <div class="contenedor-texto">
-                    <div class="texto">
-                        <h1 class="nombre">Federico Minatta</h1>
-                        <h2 class="profesion">Desarrolador Web</h2>
-                    </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="carousel.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="estilos.min.css">
+    <title>Portafolio</title>
+</head>
+
+<body>
+    <header>
+        <div class="contenedor">
+            <nav class="menu">
+                <div class="a"><a href="#acerca-de">Habilidades</a></div>
+                <div class="a"><a href="#trabajos">Trabajos</a></div>
+                <div class="a"><a href="#contacto">Contacto</a></div>
+            </nav>
+
+            <div class="contenedor-texto">
+                <div class="texto">
+                    <h1 class="nombre">Federico Minatta</h1>
+                    <h2 class="profesion">Desarrolador Web</h2>
                 </div>
             </div>
-        </header>
+        </div>
+    </header>
 
-        <section class="main">
-            <section class="acerca-de" id="acerca-de">
-                <div class="contenedor">
-                    <div class="foto">
-                        <img src="./img/foto.jpg" width="115" height="115" alt="Federico Minatta" />
-                    </div>
+    <section class="main">
+        <section class="acerca-de" id="acerca-de">
+            <div class="contenedor">
+                <div class="foto">
+                    <img src="./img/foto.jpg" width="115" height="115" alt="Federico Minatta">
+                </div>
 
-                    <div class="texto">
-                        <h3 class="habilidades">Habilidades</h3>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col s12">
-                                    <div class="carousel center-align">
-                                        <div class="carousel-item">
-                                            <img src="img/carousel/html.png" alt="" />
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="img/carousel/css.png" alt="" />
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="img/carousel/js.png" alt="" />
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="img/carousel/sass.png" alt="" />
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="img/carousel/materialize.png" alt="" />
-                                        </div>
+                <div class="texto">
+                    <h3 class="habilidades">Habilidades</h3>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col s12">
+                                <div class="carousel center-align">
+                                    <div class="carousel-item">
+                                        <img src="img/carousel/html.png" alt="">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/carousel/css.png" alt="">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/carousel/js.png" alt="">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/carousel/sass.png" alt="">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/carousel/git.png" alt="">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="img/carousel/github.png" alt="">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="trabajos" id="trabajos">
-                <div class="contenedor">
-                    <h3 class="titulo">Trabajos</h3>
-                    <div class="contenedor-trabajos">
-                        <div class="trabajo">
-                            <div class="thumb">
-                                <a href="https://mountains-mf.netlify.app/" target="_blank">
-                                    <img src="img/trabajos/mountains.png" alt=""
-                                /></a>
-                            </div>
-                            <div class="descripcion">
-                                <p class="nombre">Montañas</p>
-                                <p class="categoria">HTML - SASS</p>
-                            </div>
+            </div>
+        </section>
+        <section class="trabajos" id="trabajos">
+            <div class="contenedor">
+                <h3 class="titulo">Trabajos</h3>
+                <div class="contenedor-trabajos">
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="https://mountains-mf.netlify.app/" target="_blank">
+                                <img src="img/trabajos/mountains.png" alt=""></a>
                         </div>
-                        <div class="trabajo">
-                            <div class="thumb">
-                                <a href="https://restaurant-mf.netlify.app/" target="_blank">
-                                    <img src="img/trabajos/restaurant.png" alt=""
-                                /></a>
-                            </div>
-                            <div class="descripcion">
-                                <p class="nombre">Café</p>
-                                <p class="categoria">HTML - SASS - JS</p>
-                            </div>
+                        <div class="descripcion">
+                            <p class="nombre">Montañas</p>
+                            <p class="categoria">HTML - SASS</p>
                         </div>
-                        <div class="trabajo">
-                            <div class="thumb">
-                                <a href="https://notasjs-mf.netlify.app/" target="_blank">
-                                    <img src="img/trabajos/notas.png" alt=""
-                                /></a>
-                            </div>
-                            <div class="descripcion">
-                                <p class="nombre">Notas</p>
-                                <p class="categoria">HTML - SASS - JS</p>
-                            </div>
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="https://restaurant-mf.netlify.app/" target="_blank">
+                                <img src="img/trabajos/restaurant.png" alt=""></a>
                         </div>
-                        <div class="trabajo">
-                            <div class="thumb">
-                                <a href="https://carrito-comida-mf.netlify.app/" target="_blank"
-                                    ><img src="img/trabajos/carritoComidas.png" alt=""
-                                /></a>
-                            </div>
-                            <div class="descripcion">
-                                <p class="nombre">Carrito de Comida</p>
-                                <p class="categoria">HTML - SASS - JS</p>
-                            </div>
+                        <div class="descripcion">
+                            <p class="nombre">Café</p>
+                            <p class="categoria">HTML - SASS - JS</p>
                         </div>
-                        <div class="trabajo">
-                            <div class="thumb">
-                                <a href="https://filtrador-autos.netlify.app/" target="_blank"><img src="img/trabajos/filtradorAutos.png" alt="" /></a>
-                            </div>
-                            <div class="descripcion">
-                                <p class="nombre">Filtrador de autos</p>
-                                <p class="categoria">HTML - SASS - JS</p>
-                            </div>
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="https://notasjs-mf.netlify.app/" target="_blank">
+                                <img src="img/trabajos/notas.png" alt=""></a>
                         </div>
-                        <div class="trabajo">
-                            <div class="thumb">
-                                <a href="#" target="_blank"><img src="img/trabajos/8.jpg" alt="" /></a>
-                            </div>
-                            <div class="descripcion">
-                                <p class="nombre">Lorem Ipsum</p>
-                                <p class="categoria">HTML - CSS</p>
-                            </div>
+                        <div class="descripcion">
+                            <p class="nombre">Notas</p>
+                            <p class="categoria">HTML - SASS - JS</p>
                         </div>
-                        <div class="trabajo">
-                            <div class="thumb">
-                                <a href="#"><img src="img/trabajos/7.jpg" alt="" /></a>
-                            </div>
-                            <div class="descripcion">
-                                <p class="nombre">Lorem Ipsum</p>
-                                <p class="categoria">HTML - CSS</p>
-                            </div>
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="https://carrito-comida-mf.netlify.app/" target="_blank"><img
+                                    src="img/trabajos/carritoComidas.png" alt=""></a>
                         </div>
-                        <div class="trabajo">
-                            <div class="thumb">
-                                <a href="#"><img src="img/trabajos/8.jpg" alt="" /></a>
-                            </div>
-                            <div class="descripcion">
-                                <p class="nombre">Lorem Ipsum</p>
-                                <p class="categoria">HTML - CSS</p>
-                            </div>
+                        <div class="descripcion">
+                            <p class="nombre">Carrito de Comida</p>
+                            <p class="categoria">HTML - SASS - JS</p>
+                        </div>
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="https://filtrador-autos.netlify.app/" target="_blank"><img
+                                    src="img/trabajos/filtradorAutos.png" alt=""></a>
+                        </div>
+                        <div class="descripcion">
+                            <p class="nombre">Filtrador de autos</p>
+                            <p class="categoria">HTML - SASS - JS</p>
+                        </div>
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="#" target="_blank"><img src="img/trabajos/8.jpg" alt=""></a>
+                        </div>
+                        <div class="descripcion">
+                            <p class="nombre">Lorem Ipsum</p>
+                            <p class="categoria">HTML - CSS</p>
+                        </div>
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="#"><img src="img/trabajos/7.jpg" alt=""></a>
+                        </div>
+                        <div class="descripcion">
+                            <p class="nombre">Lorem Ipsum</p>
+                            <p class="categoria">HTML - CSS</p>
+                        </div>
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="#"><img src="img/trabajos/8.jpg" alt=""></a>
+                        </div>
+                        <div class="descripcion">
+                            <p class="nombre">Lorem Ipsum</p>
+                            <p class="categoria">HTML - CSS</p>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
+    </section>
 
-        <footer>
-            <section class="contacto">
-                <div class="contenedor">
-                    <h3 class="titulo" id="contacto">Contacto</h3>
-                    <form class="formulario" action="" id="form" netlify>
-                        <input type="text" placeholder="Nombre" name="name" required />
-                        <input type="email" placeholder="Correo" name="email" required />
-                        <textarea name="message" placeholder="Mensaje"></textarea required>
+    <footer>
+        <section class="contacto">
+            <div class="contenedor">
+                <h3 class="titulo" id="contacto">Contacto</h3>
+                <form class="formulario" action="" id="form" netlify>
+                    <input type="text" placeholder="Nombre" name="name" required>
+                    <input type="email" placeholder="Correo" name="email" required>
+                    <textarea name="message" placeholder="Mensaje"></textarea required>
                         <button class="boton" type="submit">Enviar</button>
                     </form>
                 </div>
