--- a/index.html
+++ b/index.html
@@ -163,28 +163,26 @@
                 <form class="formulario" action="" id="form" netlify>
                     <input type="text" placeholder="Nombre" name="name" required>
                     <input type="email" placeholder="Correo" name="email" required>
-                    <textarea name="message" placeholder="Mensaje"></textarea required>
-                        <button class="boton" type="submit">Enviar</button>
-                    </form>
-                </div>
-            </section>
+                    <textarea name="message" placeholder="Mensaje" required></textarea>
+                    <button class="boton" type="submit">Enviar</button>
+                </form>
+            </div>
+        </section>
 
-            <section class="redes-sociales">
-                <div class="contenedor">
-                    <a href="https://www.instagram.com/fede.minatta/?hl=es-la" target="_blank" class="instagram"
-                        ><i class="fa-brands fa-instagram"></i
-                    ></a>
-                    <a href="https://github.com/fedeminatta" target="_blank" class="github"
-                        ><i class="fa-brands fa-github"></i
-                    ></a>
-                    <a href="https://www.linkedin.com/in/fede-minatta-579a6b227/" target="_blank" class="linkedin"
-                        ><i class="fa-brands fa-linkedin"></i
-                    ></a>
-                </div>
-            </section>
-        </footer>
+        <section class="redes-sociales">
+            <div class="contenedor">
+                <a href="https://www.instagram.com/fede.minatta/?hl=es-la" target="_blank" class="instagram"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/fedeminatta" target="_blank" class="github"><i
+                        class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/fede-minatta-579a6b227/" target="_blank" class="linkedin"><i
+                        class="fa-brands fa-linkedin"></i></a>
+            </div>
+        </section>
+    </footer>
 
-        <script src="materialize.min.js"></script>
-        <script src="script.js"></script>
-    </body>
+    <script src="materialize.min.js"></script>
+    <script src="script.js"></script>
+</body>
+
 </html>
