--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
     </header>
 
-    <section class="main">
-        <section class="acerca-de" id="acerca-de">
+    <div class="main">
+        <div class="acerca-de" id="acerca-de">
             <div class="contenedor">
                 <div class="foto">
                     <img src="./img/foto.jpg" width="115" height="115" alt="Federico Minatta">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <section class="trabajos" id="trabajos">
             <div class="contenedor">
                 <h3 class="titulo">Trabajos</h3>
@@ -154,7 +154,7 @@
                 </div>
             </div>
         </section>
-    </section>
+    </div>
 
     <footer>
         <section class="contacto">
@@ -169,7 +169,7 @@
             </div>
         </section>
 
-        <section class="redes-sociales">
+        <div class="redes-sociales">
             <div class="contenedor">
                 <a href="https://www.instagram.com/fede.minatta/?hl=es-la" target="_blank" class="instagram"><i
                         class="fa-brands fa-instagram"></i></a>
@@ -178,7 +178,7 @@
                 <a href="https://www.linkedin.com/in/fede-minatta-579a6b227/" target="_blank" class="linkedin"><i
                         class="fa-brands fa-linkedin"></i></a>
             </div>
-        </section>
+        </div>
     </footer>
 
     <script src="materialize.min.js"></script>
