--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
                             <div class="col s12">
                                 <div class="carousel center-align">
                                     <div class="carousel-item">
-                                        <img src="img/carousel/html.png" alt="">
+                                        <img src="img/carousel/html.png" alt="HTML">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/carousel/css.png" alt="">
+                                        <img src="img/carousel/css.png" alt="CSS">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/carousel/js.png" alt="">
+                                        <img src="img/carousel/js.png" alt="JavaScript">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/carousel/sass.png" alt="">
+                                        <img src="img/carousel/sass.png" alt="SASS">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/carousel/git.png" alt="">
+                                        <img src="img/carousel/git.png" alt="GIT">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="img/carousel/github.png" alt="">
+                                        <img src="img/carousel/github.png" alt="GITHUB">
                                     </div>
                                 </div>
                             </div>
@@ -77,7 +77,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://mountains-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/mountains.png" alt=""></a>
+                                <img src="img/trabajos/mountains.png"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Montañas</p>
@@ -87,7 +87,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://restaurant-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/restaurant.png" alt=""></a>
+                                <img src="img/trabajos/restaurant.png"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Café</p>
@@ -97,7 +97,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://notasjs-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/notas.png" alt=""></a>
+                                <img src="img/trabajos/notas.png"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Notas</p>
@@ -107,7 +107,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://carrito-comida-mf.netlify.app/" target="_blank"><img
-                                    src="img/trabajos/carritoComidas.png" alt=""></a>
+                                    src="img/trabajos/carritoComidas.png"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Carrito de Comida</p>
@@ -117,7 +117,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://filtrador-autos.netlify.app/" target="_blank"><img
-                                    src="img/trabajos/filtradorAutos.png" alt=""></a>
+                                    src="img/trabajos/filtradorAutos.png"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Filtrador de autos</p>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="#" target="_blank"><img src="img/trabajos/8.jpg" alt=""></a>
+                            <a href="#" target="_blank"><img src="img/trabajos/8.jpg"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="#"><img src="img/trabajos/7.jpg" alt=""></a>
+                            <a href="#"><img src="img/trabajos/7.jpg"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="#"><img src="img/trabajos/8.jpg" alt=""></a>
+                            <a href="#"><img src="img/trabajos/8.jpg"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
