--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://mountains-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/mountains.png"></a>
+                                <img src="img/trabajos/mountains.png" alt="mountains"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Montañas</p>
@@ -87,7 +87,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://restaurant-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/restaurant.png"></a>
+                                <img src="img/trabajos/restaurant.png" alt="restaurant"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Café</p>
@@ -97,7 +97,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://notasjs-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/notas.png"></a>
+                                <img src="img/trabajos/notas.png" alt="notas"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Notas</p>
@@ -107,7 +107,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://carrito-comida-mf.netlify.app/" target="_blank"><img
-                                    src="img/trabajos/carritoComidas.png"></a>
+                                    src="img/trabajos/carritoComidas.png" alt="carrito de comidas"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Carrito de Comida</p>
@@ -117,7 +117,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://filtrador-autos.netlify.app/" target="_blank"><img
-                                    src="img/trabajos/filtradorAutos.png"></a>
+                                    src="img/trabajos/filtradorAutos.png" alt="filtrador de autos"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Filtrador de autos</p>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="#" target="_blank"><img src="img/trabajos/8.jpg"></a>
+                            <a href="#" target="_blank"><img src="img/trabajos/8.jpg" alt="trabajo 6"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="#"><img src="img/trabajos/7.jpg"></a>
+                            <a href="#"><img src="img/trabajos/7.jpg" alt="trabajo 7"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="#"><img src="img/trabajos/8.jpg"></a>
+                            <a href="#"><img src="img/trabajos/8.jpg" alt="trabajo 8"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Lorem Ipsum</p>
