--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portafolio de federico minatta">
+    <meta name="keywords"
+        content="portafolio, federico, minatta, portafolio personal, css, html, javascript, proyectos">
+    <meta name="autor" content="Federico Minatta">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="carousel.css">
