--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="es">
 
 <head>
+    <meta name="google-site-verification" content="cTr58DCWyBXUzpKuUeFFVGbUdad8pE_y-KhMXqeGExI" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portafolio de federico minatta">
+    <meta name="description"
+        content="Portafolio personal de federico minatta, este es un portafolio con los proyectos de federico minatta">
     <meta name="keywords"
         content="portafolio, federico, minatta, portafolio personal, css, html, javascript, proyectos">
     <meta name="autor" content="Federico Minatta">
