--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+
     <meta name="google-site-verification" content="cTr58DCWyBXUzpKuUeFFVGbUdad8pE_y-KhMXqeGExI" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -189,6 +190,8 @@
 
     <script src="materialize.min.js"></script>
     <script src="script.js"></script>
+    <script
+        type="application/ld+json">{"@context":"http://schema.org","@type":"Organization","name":"portafolio","url":"https://portafolio-mf.netlify.app/","address":"minattafederico@gmail.com","sameAs":["https://github.com/fedeminatta","https://www.instagram.com/fede.minatta/","https://www.linkedin.com/in/fede-minatta-579a6b227/"]}</script>
 </body>
 
 </html>
