--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="acerca-de" id="acerca-de">
             <div class="contenedor">
                 <div class="foto">
-                    <img src="./img/foto.jpg" width="115" height="115" alt="Federico Minatta">
+                    <img src="./img/foto.jpg" width="115" height="115" alt="Federico Minatta" loading="lazy">
                 </div>
 
                 <div class="texto">
@@ -84,7 +84,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://mountains-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/mountains.png" alt="mountains"></a>
+                                <img src="img/trabajos/mountains.png" alt="mountains" loading="lazy"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Montañas</p>
@@ -94,7 +94,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://restaurant-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/restaurant.png" alt="restaurant"></a>
+                                <img src="img/trabajos/restaurant.png" alt="restaurant" loading="lazy"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Café</p>
@@ -104,7 +104,7 @@
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://notasjs-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/notas.png" alt="notas"></a>
+                                <img src="img/trabajos/notas.png" alt="notas" loading="lazy"></a>
                         </div>
                         <div class="descripcion">
                             <p class="nombre">Notas</p>
