--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="#" target="_blank"><img src="img/trabajos/8.jpg" alt="trabajo 6"></a>
+                            <a href="https://gasto-semanal-mf.netlify.app/" target="_blank"><img
+                                    src="img/trabajos/gastoSemanal.png" alt="trabajo 6"></a>
                         </div>
                         <div class="descripcion">
-                            <p class="nombre">Lorem Ipsum</p>
-                            <p class="categoria">HTML - CSS</p>
+                            <p class="nombre">Gastos Semanales</p>
+                            <p class="categoria">HTML - CSS - JS</p>
                         </div>
                     </div>
                     <div class="trabajo">
