--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
     <meta name="autor" content="Federico Minatta">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="carousel.css">
     <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="estilos.min.css">
     <title>Portafolio</title>
 </head>
 
 <body>
-    <i class="fa fa-sun-o" aria-hidden="true"></i>
+    <i class="fa fa-sun-o" aria-hidden="true" id="dark"></i>
     <header>
         <div class="contenedor">
             <nav class="menu">
@@ -185,11 +184,10 @@
         <div class="redes-sociales">
             <div class="contenedor">
                 <a href="https://www.instagram.com/fede.minatta/?hl=es-la" target="_blank" class="instagram"><i
-                        class="fa-brands fa-instagram"></i></a>
-                <a href="https://github.com/fedeminatta" target="_blank" class="github"><i
-                        class="fa-brands fa-github"></i></a>
+                        class="fa fa-instagram"></i></a>
+                <a href="https://github.com/fedeminatta" target="_blank" class="github"><i class="fa fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/fede-minatta-579a6b227/" target="_blank" class="linkedin"><i
-                        class="fa-brands fa-linkedin"></i></a>
+                        class="fa fa-linkedin"></i></a>
             </div>
         </div>
     </footer>
