--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
 </head>
 
 <body>
-    <i class="fa fa-sun-o" aria-hidden="true" id="dark"></i>
+    <div id="info-user">
+        <i class="fa fa-times-circle" aria-hidden="true" id="close"></i>
+        <div>
+            <img src="./img/fede.jpg" width="115" height="115" alt="Federico Minatta">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga ex laboriosam non ea? Repudiandae,
+            corporis iure aspernatur a ipsam eum voluptas, voluptatum quo repellendus iusto qui vel pariatur facilis.
+        </p>
+    </div>
+    <i class="fa fa-moon-o" aria-hidden="true" id="dark"></i>
     <header>
         <div class="contenedor">
             <nav class="menu">
@@ -43,8 +52,8 @@
     <div class="main">
         <div class="acerca-de" id="acerca-de">
             <div class="contenedor">
-                <div class="foto">
-                    <img src="./img/foto.jpg" width="115" height="115" alt="Federico Minatta" loading="lazy">
+                <div class="foto" id="foto-user">
+                    <img src="./img/foto.jpg" width="115" height="115" alt="Federico Minatta">
                 </div>
 
                 <div class="texto">
