--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="acerca-de" id="acerca-de">
             <div class="contenedor">
                 <div class="foto" id="foto-user">
-                    <img src="./img/arrow.png" alt="" id="arrow">
+                    <!-- <img src="./img/arrow.png" alt="" id="arrow"> -->
                     <img src="./img/foto.jpg" width="115" height="115" alt="Federico Minatta" class="fede">
                 </div>
 
