--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             corporis iure aspernatur a ipsam eum voluptas, voluptatum quo repellendus iusto qui vel pariatur facilis.
         </p>
     </div>
+    <i class="fa fa-chevron-up" aria-hidden="true" id="up"></i>
     <i class="fa fa-moon-o" aria-hidden="true" id="dark"></i>
     <header>
         <div class="contenedor">
