--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <div class="contenedor">
             <nav class="menu">
                 <div class="a"><a href="#acerca-de">Habilidades</a></div>
+                <div class="a" id="acerca-de-mi">
+                    <a href="#">Acerca de</a>
+                </div>
                 <div class="a"><a href="#trabajos">Trabajos</a></div>
                 <div class="a"><a href="#contacto">Contacto</a></div>
             </nav>
@@ -54,7 +57,6 @@
         <div class="acerca-de" id="acerca-de">
             <div class="contenedor">
                 <div class="foto" id="foto-user">
-                    <!-- <img src="./img/arrow.png" alt="" id="arrow"> -->
                     <img src="./img/foto.jpg" width="115" height="115" alt="Federico Minatta" class="fede">
                 </div>
 
@@ -178,9 +180,6 @@
 
     <footer>
         <section class="contacto">
-            <div class="enviado">
-                <p>Correo enviado correctamente</p>
-            </div>
             <div class="contenedor contenedor-form">
                 <h3 class="titulo" id="contacto">Contacto</h3>
                 <form class="formulario" action="" id="form" netlify>
