--- a/index.html
+++ b/index.html
@@ -27,18 +27,23 @@
         <div>
             <img src="./img/fede.jpg" width="115" height="115" alt="Federico Minatta">
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga ex laboriosam non ea? Repudiandae,
-            corporis iure aspernatur a ipsam eum voluptas, voluptatum quo repellendus iusto qui vel pariatur facilis.
-        </p>
+        <h3>Bienvenido 👋</h3>
+        <p>Mi nombre es Federico Minatta y soy Desarrollador Front End.</p>
+        <p>Mi aprendizaje fue en su mayoría de manera autodidacta, he tomado varios cursos y creado muchos proyectos
+            (tanto los que
+            muestro en este portafolio como otros que no están acá).
+            Busco la manera de retarme todos los días a aprender algo
+            nuevo. <br>
+            Actualmente me sigo capacitando en todos los
+            sectores que
+            manejo para mejorar como desarrollador y poder crear mejores sitios.🚀</p>
     </div>
     <i class="fa fa-chevron-up" aria-hidden="true" id="up"></i>
     <i class="fa fa-moon-o" aria-hidden="true" id="dark"></i>
     <header>
         <nav class="menu">
             <div class="a"><a href="#acerca-de">Habilidades</a></div>
-            <div class="a" id="acerca-de-mi">
-                <a href="#">Acerca de</a>
-            </div>
+            <div class="a" id="acerca-de-mi"><a href="#">Acerca de</a></div>
             <div class="a"><a href="#trabajos">Trabajos</a></div>
             <div class="a"><a href="#contacto">Contacto</a></div>
         </nav>
@@ -48,7 +53,7 @@
             <div class="contenedor-texto">
                 <div class="texto">
                     <h1 class="nombre">Federico Minatta</h1>
-                    <h2 class="profesion">Desarrolador Web</h2>
+                    <h2 class="profesion">Desarrollador Front End</h2>
                 </div>
             </div>
         </div>
