--- a/index.html
+++ b/index.html
@@ -103,12 +103,22 @@
                 <div class="contenedor-trabajos">
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="https://mountains-mf.netlify.app/" target="_blank">
-                                <img src="img/trabajos/mountains.png" alt="mountains" loading="lazy"></a>
+                            <a href="https://gasto-semanal-mf.netlify.app/" target="_blank"><img
+                                    src="img/trabajos/gastoSemanal.png" alt="trabajo 6"></a>
                         </div>
                         <div class="descripcion">
-                            <p class="nombre">Montañas</p>
-                            <p class="categoria">HTML - SASS</p>
+                            <p class="nombre">Gastos Semanales</p>
+                            <p class="categoria">HTML - CSS - JS</p>
+                        </div>
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="https://carrito-comida-mf.netlify.app/" target="_blank"><img
+                                    src="img/trabajos/carritoComidas.png" alt="carrito de comidas"></a>
+                        </div>
+                        <div class="descripcion">
+                            <p class="nombre">Carrito de Comida</p>
+                            <p class="categoria">HTML - SASS - JS</p>
                         </div>
                     </div>
                     <div class="trabajo">
@@ -131,16 +141,7 @@
                             <p class="categoria">HTML - SASS - JS</p>
                         </div>
                     </div>
-                    <div class="trabajo">
-                        <div class="thumb">
-                            <a href="https://carrito-comida-mf.netlify.app/" target="_blank"><img
-                                    src="img/trabajos/carritoComidas.png" alt="carrito de comidas"></a>
-                        </div>
-                        <div class="descripcion">
-                            <p class="nombre">Carrito de Comida</p>
-                            <p class="categoria">HTML - SASS - JS</p>
-                        </div>
-                    </div>
+
                     <div class="trabajo">
                         <div class="thumb">
                             <a href="https://filtrador-autos.netlify.app/" target="_blank"><img
@@ -153,15 +154,15 @@
                     </div>
                     <div class="trabajo">
                         <div class="thumb">
-                            <a href="https://gasto-semanal-mf.netlify.app/" target="_blank"><img
-                                    src="img/trabajos/gastoSemanal.png" alt="trabajo 6"></a>
+                            <a href="https://mountains-mf.netlify.app/" target="_blank">
+                                <img src="img/trabajos/mountains.png" alt="mountains" loading="lazy"></a>
                         </div>
                         <div class="descripcion">
-                            <p class="nombre">Gastos Semanales</p>
-                            <p class="categoria">HTML - CSS - JS</p>
+                            <p class="nombre">Montañas</p>
+                            <p class="categoria">HTML - SASS</p>
                         </div>
                     </div>
-                    <div class="trabajo">
+                    <!-- <div class="trabajo">
                         <div class="thumb">
                             <a href="#"><img src="img/trabajos/7.jpg" alt="trabajo 7"></a>
                         </div>
@@ -178,7 +179,7 @@
                             <p class="nombre">Lorem Ipsum</p>
                             <p class="categoria">HTML - CSS</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
